@@ -764,9 +764,9 @@ static int push_delimited_token (CMD *c, const char *tok,
 
 static int push_quoted_token (CMD *c, const char *s,
 			      int len, int pos,
-			      int esc)
+			      int bse, int esc)
 {
-    char *tok = malloc(len + 1);
+    char *tok = calloc(len + 1, 1);
     int err = 0;
 
     if (tok == NULL) {
@@ -775,14 +775,34 @@ static int push_quoted_token (CMD *c, const char *s,
 	const char *p = s + 1;
 	int i = 0;
 
-	if (c->ci == PRINTF || (c->ci == PRINT && !esc)) {
+	if (c->ci == PRINT && bse) {
+	    /* apply full escaping */
+	    char c;
+	    int j;
+
+	    for (j=0; j<len && !err; ) {
+		if (p[j] == '\\') {
+		    c = printf_escape(p[j+1], &err);
+		    if (c == 0) {
+			/* tolerate_slop */
+			tok[i++] = p[j];
+			tok[i++] = p[j+1];
+		    } else {
+			tok[i++] = c;
+		    }
+		    j += 2;
+		} else {
+		    tok[i++] = p[j++];
+		}
+	    }
+	} else if (c->ci == PRINTF || (c->ci == PRINT && !esc)) {
 	    /* either a format string, or "print" with no
-	       backslash-quote escapes
+	       backslash-quote escapes: print 'as is'
 	    */
 	    *tok = '\0';
 	    strncat(tok, p, len);
 	} else {
-	    /* unescape escaped quotes */
+	    /* escape quotes (only), except at end of input */
 	    while (*p) {
 		if (*p == '\\' && *(p+1) == '"') {
 		    if (*(p+2) == '\0') {
@@ -866,19 +886,20 @@ static int wild_spn (const char *s)
     return strspn(s, ok);
 }
 
-/* We allow here for special behavior with PRINT, whereby
-   '\"' is interpreted as an escaped double-quote, unless
-   it occurs at the end of the string literal. We set *esc
-   to non-zero if @s contains any occurrences of the
-   special combination of bytes.
+/* We allow here for special behavior with PRINT, whereby '\"' is
+   interpreted as an escaped double-quote, unless it occurs at the end
+   of the input. We set *esc to non-zero if @s contains any occurrences
+   of this sequence of bytes.
 */
 
-static int closing_quote_pos (const char *s, int ci, int *esc)
+static int closing_quote_pos (const char *s, int ci,
+			      int bse, int *esc)
 {
+    int raw = (bse == 0);
     int i, j, bsl;
 
     for (i=1; s[i]; i++) {
-	if (s[i] == '"' && ci == PRINT) {
+	if (s[i] == '"' && raw && ci == PRINT) {
 	    if (s[i-1] == '\\') {
 		if (s[i+1] == '\0') {
 		    /* got the closer */
@@ -892,7 +913,7 @@ static int closing_quote_pos (const char *s, int ci, int *esc)
 		return i-1;
 	    }
 	} else if (s[i] == '"') {
-	    /* not plain PRINT */
+	    /* not plain PRINT, or bs_escape */
 	    bsl = 0;
 	    for (j=i-1; j>=1; j--) {
 		if (s[j] == '\\') {
@@ -3544,6 +3565,7 @@ static int tokenize_line (ExecState *state, DATASET *dset,
     int n, m, pos = 0;
     int wild_ok = 0;
     int want_fname = 0;
+    int bse = bs_escape_on();
     int err = 0;
 
 #if CDEBUG || TDEBUG
@@ -3628,12 +3650,12 @@ static int tokenize_line (ExecState *state, DATASET *dset,
 	} else if (*s == '"') {
 	    int esc = 0;
 
-	    n = closing_quote_pos(s, cmd->ci, &esc);
+	    n = closing_quote_pos(s, cmd->ci, bse, &esc);
 	    if (n < 0) {
 		gretl_errmsg_sprintf(_("Unmatched '%c'\n"), '"');
 		err = E_PARSE;
 	    } else {
-		err = push_quoted_token(cmd, s, n, pos, esc);
+		err = push_quoted_token(cmd, s, n, pos, bse, esc);
 	    }
 	    n += 2;
 	} else if ((n = symbol_spn(s)) > 0) {
